disable original workflows

--- a/.github/workflows/bootstrap_archives.yml
+++ b/.github/workflows/bootstrap_archives.yml
@@ -12,6 +12,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  if: false
   build:
     permissions:
       contents: read # actions/upload-artifact doesn't need contents: write
