--- a/.github/workflows/golang_validation.yml
+++ b/.github/workflows/golang_validation.yml
@@ -8,6 +8,7 @@ on:
     - 'scripts/build/setup/termux_setup_golang.sh'
 
 jobs:
+  if: false
   golang_validation:
     runs-on: ubuntu-latest
     strategy:
