--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -30,6 +30,7 @@ concurrency:
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
+  if: false
   build:
     permissions:
       contents: read # actions/upload-artifact doesn't need contents: write
