--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -1,4 +1,5 @@
 name: Docker image
+disabled: true
 
 on:
   push:
@@ -15,7 +16,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  if: false
   update:
     runs-on: ubuntu-latest
     permissions:
