--- a/.github/workflows/package_updates.yml
+++ b/.github/workflows/package_updates.yml
@@ -1,4 +1,5 @@
 name: Package updates
+disabled: true
 
 on:
   push:
@@ -26,7 +27,6 @@ on:
 permissions: {} # none
 
 jobs:
-  if: false
   update-packages-dry-run:
     permissions:
       contents: read
