--- a/.github/workflows/vagrant.yml
+++ b/.github/workflows/vagrant.yml
@@ -1,4 +1,5 @@
 name: Vagrant
+disabled: true
 
 on:
   push:
@@ -21,7 +22,6 @@ on:
 permissions: {} # none
 
 jobs:
-  if: false
   build:
     permissions:
       contents: read
